--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions{
+        pickFirst 'META-INF/LICENSE'
+    }
 }
 
 dependencies {
@@ -41,6 +45,9 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.4.1'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1'
 
 }
 
